set elasticsearch for CRUD user
